--- a/package.json
+++ b/package.json
@@ -9,10 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/drawer": "^6.4.4",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.2.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
+    "expo-font": "^10.2.0",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.9.3",
+    "moment": "^2.29.4",
+    "nanoid": "^4.0.0",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-uuid": "^2.0.1",
+    "react-navigation-header-buttons": "^9.0.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "uuid": "^8.3.2",
+    "@react-native-picker/picker": "2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
